# aao-uflp

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-multi-platform.yml
misc/M/: Kcapmo1.txt  Kcapmo2.txt  Kcapmo5.txt  Kcapmp3.txt  Kcapmp4.txt  Kcapmq1.txt  Kcapmr4.txt
src/algorithms/: Aco.cpp  Aco.hpp  Algorithm.hpp  CrowSearchAlgorithm.cpp  CrowSearchAlgorithm.hpp  GRASP.cpp  GRASP.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GreedyAlgorithm.cpp  GreedyAlgorithm.hpp  HillClimbingAlgorithm.cpp  HillClimbingAlgorithm.hpp  ParticleSwarmOptimizationAlgorithm.cpp  ParticleSwarmOptimizationAlgorithm.h  SimulatedAnnealingAlgorithm.cpp  SimulatedAnnealingAlgorithm.hpp  TabuSearchAlgorithm.cpp  TabuSearchAlgorithm.hpp  VariableNeighborhoodSearchAlgorithm.cpp  VariableNeighborhoodSearchAlgorithm.h
src/misc/: AlgorithmLogger.cpp  AlgorithmLogger.h  MParser.cpp  MParser.hpp  ORLibParser.cpp  ORLibParser.hpp  Parseable.hpp
src/problem/: Customer.hpp  Problem.hpp  Warehouse.hpp
src/tests/: cost_test.cpp  does_it_run.cpp  does_it_run_test.cpp  greedy_algorithm_test.cpp  test1
src/tests/FicheirosTeste/: optimal.txt
src/tests/GRASP_algorithm/: GRASP_algorithm_test_cap101.cpp  GRASP_algorithm_test_cap102.cpp  GRASP_algorithm_test_cap103.cpp  GRASP_algorithm_test_cap104.cpp  GRASP_algorithm_test_cap131.cpp  GRASP_algorithm_test_cap132.cpp  GRASP_algorithm_test_cap133.cpp  GRASP_algorithm_test_cap134.cpp  GRASP_algorithm_test_cap71.cpp  GRASP_algorithm_test_cap72.cpp  GRASP_algorithm_test_cap73.cpp  GRASP_algorithm_test_cap74.cpp  GRASP_algorithm_test_capa.cpp  GRASP_algorithm_test_capb.cpp  GRASP_algorithm_test_capc.cpp  GRASP_algorithm_test_mo1.cpp  GRASP_algorithm_test_mo2.cpp  GRASP_algorithm_test_mo3.cpp  GRASP_algorithm_test_mo4.cpp  GRASP_algorithm_test_mo5.cpp  GRASP_algorithm_test_mp1.cpp  GRASP_algorithm_test_mp2.cpp  GRASP_algorithm_test_mp3.cpp  GRASP_algorithm_test_mp4.cpp  GRASP_algorithm_test_mp5.cpp  GRASP_algorithm_test_mq1.cpp  GRASP_algorithm_test_mq2.cpp  GRASP_algorithm_test_mq3.cpp  GRASP_algorithm_test_mq4.cpp  GRASP_algorithm_test_mq5.cpp  GRASP_algorithm_test_mr1.cpp  GRASP_algorithm_test_mr2.cpp  GRASP_algorithm_test_mr3.cpp  GRASP_algorithm_test_mr4.cpp  GRASP_algorithm_test_mr5.cpp
src/tests/aco_algorithm/: aco_algorithm_test_1.cpp
src/tests/binary_crow_search_algorithm/: binary_crow_search_test_cap101.cpp  binary_crow_search_test_cap102.cpp  binary_crow_search_test_cap103.cpp  binary_crow_search_test_cap104.cpp  binary_crow_search_test_cap131.cpp  binary_crow_search_test_cap132.cpp  binary_crow_search_test_cap133.cpp  binary_crow_search_test_cap134.cpp  binary_crow_search_test_cap71.cpp  binary_crow_search_test_cap72.cpp  binary_crow_search_test_cap73.cpp  binary_crow_search_test_cap74.cpp  binary_crow_search_test_capa.cpp  binary_crow_search_test_capb.cpp  binary_crow_search_test_capc.cpp  binary_crow_search_test_mo1.cpp  binary_crow_search_test_mo2.cpp  binary_crow_search_test_mo3.cpp  binary_crow_search_test_mo4.cpp  binary_crow_search_test_mo5.cpp  binary_crow_search_test_mp1.cpp  binary_crow_search_test_mp2.cpp  binary_crow_search_test_mp3.cpp  binary_crow_search_test_mp4.cpp  binary_crow_search_test_mp5.cpp  binary_crow_search_test_mq1.cpp  binary_crow_search_test_mq2.cpp  binary_crow_search_test_mq3.cpp  binary_crow_search_test_mq4.cpp  binary_crow_search_test_mq5.cpp  binary_crow_search_test_mr1.cpp  binary_crow_search_test_mr2.cpp  binary_crow_search_test_mr3.cpp  binary_crow_search_test_mr4.cpp  binary_crow_search_test_mr5.cpp
src/tests/genetic_algorithm/: genetic_algorithm_test_1.cpp
src/tests/greedy_algorithm/: greedy_algorithm_test_1.cpp  greedy_algorithm_test_2.cpp  greedy_algorithm_test_3.cpp
src/tests/hill_climbing_algorithm/: hill_climbing_algorithm_test_cap101.cpp  hill_climbing_algorithm_test_cap102.cpp  hill_climbing_algorithm_test_cap103.cpp  hill_climbing_algorithm_test_cap104.cpp  hill_climbing_algorithm_test_cap131.cpp  hill_climbing_algorithm_test_cap132.cpp  hill_climbing_algorithm_test_cap133.cpp  hill_climbing_algorithm_test_cap134.cpp  hill_climbing_algorithm_test_cap71.cpp  hill_climbing_algorithm_test_cap72.cpp  hill_climbing_algorithm_test_cap73.cpp  hill_climbing_algorithm_test_cap74.cpp  hill_climbing_algorithm_test_capa.cpp  hill_climbing_algorithm_test_capb.cpp  hill_climbing_algorithm_test_capc.cpp  hill_climbing_algorithm_test_mo1.cpp  hill_climbing_algorithm_test_mo2.cpp  hill_climbing_algorithm_test_mo3.cpp  hill_climbing_algorithm_test_mo4.cpp  hill_climbing_algorithm_test_mo5.cpp  hill_climbing_algorithm_test_mp1.cpp  hill_climbing_algorithm_test_mp2.cpp  hill_climbing_algorithm_test_mp3.cpp  hill_climbing_algorithm_test_mp4.cpp  hill_climbing_algorithm_test_mp5.cpp  hill_climbing_algorithm_test_mq1.cpp  hill_climbing_algorithm_test_mq2.cpp  hill_climbing_algorithm_test_mq3.cpp  hill_climbing_algorithm_test_mq4.cpp  hill_climbing_algorithm_test_mq5.cpp  hill_climbing_algorithm_test_mr1.cpp  hill_climbing_algorithm_test_mr2.cpp  hill_climbing_algorithm_test_mr3.cpp  hill_climbing_algorithm_test_mr4.cpp  hill_climbing_algorithm_test_mr5.cpp
src/tests/particle_swarm_optimization_algorithm/: particle_swarm_optimization_test_capa.cpp  particle_swarm_optimization_test_capb.cpp  particle_swarm_optimization_test_capc.cpp  particle_swarm_optimization_test_mr1.cpp  particle_swarm_optimization_test_mr2.cpp  particle_swarm_optimization_test_mr3.cpp  particle_swarm_optimization_test_mr4.cpp  particle_swarm_optimization_test_mr5.cpp
src/tests/simulated_annealing_algorithm/: simulated_annealing_test_cap101.cpp  simulated_annealing_test_cap102.cpp  simulated_annealing_test_cap103.cpp  simulated_annealing_test_cap104.cpp  simulated_annealing_test_cap131.cpp  simulated_annealing_test_cap132.cpp  simulated_annealing_test_cap133.cpp  simulated_annealing_test_cap134.cpp  simulated_annealing_test_cap71.cpp  simulated_annealing_test_cap72.cpp  simulated_annealing_test_cap73.cpp  simulated_annealing_test_cap74.cpp  simulated_annealing_test_capa.cpp  (+22 more)
src/utils/: Parseable.hpp  ParserM.hpp
(+24 files in other folders)
